# biocomputing

./: .gitignore  MANIFEST.in  README.md  __init__.py  example.py  pyproject.toml  setup.py  wrapper.py
.github/workflows/: publish-to-pypi.yml  test-and-lint.yml
_lib/: .gitkeep
biocomputing/: .gitignore  GITHUB_SETUP.md  LICENSE  MANIFEST.in  __init__.py  download_libs.py  example.py  pyproject.toml  setup.py  wrapper.py
