[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biocomputing"
version = "1.0.0"
description = "High-performance DNA sequence generator with Python bindings"
readme = "README.md"
requires-python = ">=3.6"
license.text = "MIT"
dynamic = ["optional-dependencies"]
authors = [
    {name = "Sanjog Sigdel", email = "sanjog.sigdel@ku.edu.np"},
]
keywords = ["dna", "generator", "bioinformatics", "parallel", "openmp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6+",
]

[project.urls]
Homepage = "https://github.com/sigdelsanjog/biocomputing"
Documentation = "https://github.com/sigdelsanjog/biocomputing#readme"
Repository = "https://github.com/sigdelsanjog/biocomputing.git"
Issues = "https://github.com/sigdelsanjog/biocomputing/issues"
"C Backend" = "https://github.com/sigdelsanjog/biocomputing_core"

[tool.setuptools]
packages = ["biocomputing"]

[tool.setuptools.package-data]
biocomputing = ["_lib/*.so", "_lib/.gitkeep"]
