[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biocomputing"
version = "1.0.8"
description = "High-performance DNA sequence generator with Python bindings"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
dynamic = ["optional-dependencies"]
authors = [
    {name = "Sanjog Sigdel", email = "sanjog.sigdel@ku.edu.np"},
]
keywords = ["dna", "generator", "bioinformatics", "parallel", "openmp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/sigdelsanjog/biocomputing"
Documentation = "https://github.com/sigdelsanjog/biocomputing#readme"
Repository = "https://github.com/sigdelsanjog/biocomputing.git"
Issues = "https://github.com/sigdelsanjog/biocomputing/issues"
"C Backend" = "https://github.com/sigdelsanjog/biocomputing_core"

[tool.setuptools]
packages = ["biocomputing"]

[tool.setuptools.package-data]
biocomputing = ["_lib/*.so", "_lib/.gitkeep"]
