[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biocomputing"
version = "1.0.9"
description = "High-performance DNA sequence generator with Python bindings"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Sanjog Sigdel", email = "sanjog.sigdel@ku.edu.np"},
]
keywords = ["dna", "generator", "bioinformatics", "parallel", "openmp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "python-multipart>=0.0.5",
]
analysis = [
    "pandas>=1.0.0",
    "numpy>=1.19.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
]

[project.urls]
Homepage = "https://github.com/sigdelsanjog/biocomputing"
Documentation = "https://github.com/sigdelsanjog/biocomputing#readme"
Repository = "https://github.com/sigdelsanjog/biocomputing.git"
Issues = "https://github.com/sigdelsanjog/biocomputing/issues"
"C Backend" = "https://github.com/sigdelsanjog/biocomputing_core"

[tool.setuptools]
packages = ["biocomputing"]

[tool.setuptools.package-data]
biocomputing = ["_lib/*.so", "_lib/.gitkeep"]
